canary-nginx/nginx-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: v2
  template:
    metadata:
      labels:
        app: nginx
        version: v2
    spec:
      containers:
        - name: nginx-canary
          image: asia-northeast3-docker.pkg.dev/mh-bespin-dev/nginx/dqa-test-nginx-canary:v2
          ports:
           - containerPort: 80
