canary-nginx/canary-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-canary
  template:
    metadata:
      labels:
        app: svc-canary
    spec:
      containers:
        - name: svc-canary
          image: asia-northeast3-docker.pkg.dev/mh-bespin-dev/nginx/dqa-test-nginx-canary:v2
          ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
name: svc-canary
spec:
  type: NodePort
  selector:
    app: svc-canary
  ports:
    - port: 80
      name: http
