canary-nginx/nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: v1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
        - name: nginx-app
          image: asia-northeast3-docker.pkg.dev/mh-bespin-dev/nginx/dqa-test-nginx:v4
          ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: NodePort
  selector:
    app: nginx
    version: v1
  ports:
    - port: 80
      name: http
