canary-nginx/production-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-production
  template:
    metadata:
      labels:
        app: svc-production
    spec:
      containers:
        - name: svc-production
          image: asia-northeast3-docker.pkg.dev/mh-bespin-dev/nginx/dqa-test-nginx:v4
          ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-production
spec:
  type: NodePort
  selector:
    app: svc-production
  ports:
    - port: 80
      name: http
