canary-nginx/production-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.cheeze.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-production
                port:
                  name: http
